created rustlang_lexer lib crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,5 @@ name = "rustlang"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+rustlang_lexer = { path = "compiler/rustlang_lexer" }
